# llm-d-kv-cache

./: .gitignore  .golangci.yml  .licenserc.yaml  CODEOWNERS  Dockerfile  Dockerfile.tokenizer  Dockerfile.uds  Makefile  OWNERS  PR_SIGNOFF.md  README.md  SECURITY.md  _typos.toml  go.mod  go.sum  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/scripts/: generate-pip-index.sh
.github/workflows/: auto-assign.yaml  ci-dev-uds-tokenizer.yaml  ci-examples.yaml  ci-lint.yaml  ci-nightly-uds-tokenizer.yaml  ci-pages-index.yaml  ci-pr-checks.yaml  ci-pvc-evictor.yaml  ci-release-pvc-evictor.yaml  ci-release-uds-tokenizer.yaml  ci-release.yaml  ci-test-embedded.yaml  ci-test.yaml  ci-uds-tokenizer.yaml  ci-wheels.yaml  link-checker.lock.yml  non-main-gatekeeper.yml  prow-pr-automerge.yml  re-run-action.yml  size-label.yml  typo-checker.lock.yml  upstream-monitor.lock.yml
api/indexerpb/: indexer.pb.go  indexer.proto  indexer_grpc.pb.go
api/tokenizerpb/: tokenizer.pb.go  tokenizer.proto  tokenizer_grpc.pb.go
docs/: README.md  architecture.md  configuration.md  indexer.md  tokenization.md
examples/helper/: events.go  indexer.go  publisher.go
examples/kv_cache_aware_scorer/: kvcache_aware_scorer.go
examples/kv_cache_index/: main.go
examples/kv_events/: README.md
examples/testdata/: data.go
examples/valkey_example/: README.md  main.go
hack/: verify-examples.sh
kv_connectors/llmd_fs_backend/: Dockerfile.dev  Dockerfile.wheel  (+4 more)
services/uds_tokenizer/: Dockerfile  README.md  pyproject.toml  requirements.txt  run_grpc_server.py  tokenizer_grpc_service.py  tokenizer_pb2.py  tokenizer_pb2_grpc.py
services/uds_tokenizer/tests/: conftest.py  run_integration_tests.py  test_integration.py  test_renderer.py
services/uds_tokenizer/tokenizer_service/: renderer.py  tokenizer.py
services/uds_tokenizer/tokenizerpb/: tokenizer_pb2.py  tokenizer_pb2_grpc.py
services/uds_tokenizer/utils/: thread_pool_utils.py
(+242 files in other folders)
