[project]
name = "uds-tokenizer"
version = "0.1.0"
description = "UDS Tokenizer Service - gRPC tokenization over Unix Domain Socket"
requires-python = ">=3.12"
dependencies = [
    "shortuuid==1.0.13",
    "modelscope",
    "huggingface-hub",
    "aiohttp==3.9.5",
    "protobuf==6.31.1",
    "grpcio==1.76.0",
    "grpcio-tools==1.76.0",
    "grpcio-reflection==1.76.0",
    "readerwriterlock>=1.0.9",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.14.0",
    "pytest-timeout>=2.1.0",
    "requests>=2.25.0",
]

[tool.setuptools]
py-modules = ["tokenizer_grpc_service", "run_grpc_server"]

[tool.setuptools.packages.find]
include = ["tokenizer_service*", "tokenizerpb*", "utils*"]
