[project]
name = "uds-tokenizer"
version = "0.1.0"
description = "UDS Tokenizer Service - gRPC tokenization over Unix Domain Socket"
requires-python = ">=3.12"
dependencies = [
    # vLLM 0.18.0rc0 CPU wheels — arch-conditional via PEP 508 markers
    "vllm @ https://wheels.vllm.ai/2dccb38f73fa79bc629b8b215b8066e61ce4a211/vllm-0.18.0rc0-cp38-abi3-manylinux_2_31_x86_64.whl ; platform_machine == 'x86_64'",
    "vllm @ https://wheels.vllm.ai/2dccb38f73fa79bc629b8b215b8066e61ce4a211/vllm-0.18.0rc0-cp38-abi3-manylinux_2_31_aarch64.whl ; platform_machine == 'aarch64'",
    "pydantic",
    "shortuuid",
    "transformers<5",
    "safetensors",
    "Jinja2",
    "modelscope",
    "huggingface-hub",
    "aiohttp",
    "protobuf",
    "tiktoken",
    "grpcio",
    "grpcio-tools",
    "grpcio-reflection",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.14.0",
    "pytest-timeout>=2.1.0",
    "requests>=2.25.0",
]

[tool.setuptools]
py-modules = ["tokenizer_grpc_service", "run_grpc_server"]

[tool.setuptools.packages.find]
include = ["tokenizer_service*", "tokenizerpb*", "utils*"]
